# tq

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  build.ps1  build.sh
.github/: copilot-instructions.md
docs/: API.md  BUILD.md  EXAMPLES.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JQ_FEATURE_PARITY.md  ROADMAP.md  SESSION_2_SUMMARY.md  SESSION_3_CHECKLIST.md  SESSION_3_SUMMARY.md  SESSION_SUMMARY.md  TQ_MANUAL.md
pytq/: CMakeLists.txt  README.md  benchmark.py  pyproject.toml  pytq.cpp  setup.py
tq-cli/: CMakeLists.txt  main.cpp
tq-core/: CMakeLists.txt
tq-core/include/tq/: ast.hpp  evaluator.hpp  lexer.hpp  new_evaluator.hpp  new_parser.hpp  parser.hpp  toon_parser.hpp  tq.hpp  value.hpp
tq-core/src/: evaluator.cpp  lexer.cpp  new_evaluator.cpp  new_parser.cpp  parser.cpp  toon_parser.cpp  tq.cpp  value.cpp
tq-core/tests/: CMakeLists.txt  benchmark.cpp  test_evaluator.cpp  test_evaluator_new.cpp  test_integration.cpp  test_lexer.cpp  test_parser.cpp  test_value.cpp
tq-core/tests/data/: sample.toon
